Fix footer elements gap

--- a/tournaments.css
+++ b/tournaments.css
@@ -153,17 +153,17 @@ header {
 }
 
 footer {
-  padding: 0.5rem 0;
+  padding: 0.5rem;
   height: 2rem;
   color: #fafaf9;
   background-color: black;
-  margin-top: auto;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 5vw;
   align-items: center;
   font-family: SGB;
   border-top: 1px solid #292524;
@@ -172,9 +172,6 @@ footer {
 
 footer > a {
   text-decoration: none;
-}
-
-footer > a {
   background-color: black;
   color: #fafaf9;
   border: none;
@@ -187,13 +184,13 @@ footer > a {
   width: 4rem;
 }
 
-
 a > div:first-child {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 2rem;
 }
+
 
 
 
